syntax = "proto3";

package ibc.applications.transfer.v2;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/ibc-go/v9/modules/apps/transfer/v2/types";

// Forwarding defines a list of port ID, channel ID pairs determining the path
// through which a packet must be forwarded, and an unwind boolean indicating if
// the coin should be unwinded to its native chain before forwarding.
message Forwarding {
  // optional unwinding for the token transfered
  bool unwind = 1;
  // optional intermediate path through which packet will be forwarded
  repeated Hop hops = 2 [(gogoproto.nullable) = false];
}

// Hop defines a port ID, channel ID pair specifying where tokens must be forwarded
// next in a multihop transfer.
message Hop {
  option (gogoproto.goproto_stringer) = false;
  string port_id                      = 1;
  string channel_id                   = 2;
}
